--- a/Andy's notebook.ipynb
+++ b/Andy's notebook.ipynb
@@ -236,12 +236,12 @@
     "#Creating PieCart\n",
     "labels = ['Positive ['+str(positive)+'%]' , 'Neutral ['+str(neutral)+'%]','Negative ['+str(negative)+'%]']\n",
     "sizes = [positive, neutral, negative]\n",
-    "colors = ['yellowgreen', 'blue’,’red’]\n",
+    "colors = ['yellowgreen', 'blue','red']\n",
     "patches, texts = plt.pie(sizes,colors=colors, startangle=90)\n",
-    "plt.style.use('default’)\n",
+    "plt.style.use('default')\n",
     "plt.legend(labels)\n",
     "plt.title(\"Sentiment Analysis Result for keyword= \"+keyword+\"\" )\n",
-    "plt.axis('equal’)\n",
+    "plt.axis('equal')\n",
     "plt.show()"
    ]
   },
@@ -272,12 +272,12 @@
     "#Cleaning Text (RT, Punctuation etc)\n",
     "#Creating new dataframe and new features\n",
     "tw_list = pd.DataFrame(tweet_list)\n",
-    "tw_list[“text”] = tw_list[0]\n",
+    "tw_list[\"text\"] = tw_list[0]\n",
     "#Removing RT, Punctuation etc\n",
-    "remove_rt = lambda x: re.sub(‘RT @\\w+: ‘,” “,x)\n",
-    "rt = lambda x: re.sub(“(@[A-Za-z0–9]+)|([⁰-9A-Za-z \\t])|(\\w+:\\/\\/\\S+)”,” “,x)\n",
-    "tw_list[“text”] = tw_list.text.map(remove_rt).map(rt)\n",
-    "tw_list[“text”] = tw_list.text.str.lower()\n",
+    "remove_rt = lambda x: re.sub('RT @\\w+: ',\" \",x)\n",
+    "rt = lambda x: re.sub(\"(@[A-Za-z0–9]+)|([⁰-9A-Za-z \\t])|(\\w+:\\/\\/\\S+)\",\" \",x)\n",
+    "tw_list[\"text\"] = tw_list.text.map(remove_rt).map(rt)\n",
+    "tw_list[\"text\"] = tw_list.text.str.lower()\n",
     "tw_list.head(10)"
    ]
   },
@@ -290,21 +290,21 @@
     "#Calculating Negative, Positive, Neutral and Compound values\n",
     "tw_list[['polarity', 'subjectivity']] = tw_list['text'].apply(lambda Text: pd.Series(TextBlob(Text).sentiment))\n",
     "for index, row in tw_list['text'].iteritems():\n",
-    " score = SentimentIntensityAnalyzer().polarity_scores(row)\n",
-    " neg = score['neg']\n",
-    " neu = score['neu']\n",
-    " pos = score['pos']\n",
-    " comp = score['compound']\n",
-    " if neg > pos:\n",
-    " tw_list.loc[index, 'sentiment'] = “negative”\n",
-    " elif pos > neg:\n",
-    " tw_list.loc[index, 'sentiment'] = “positive”\n",
-    " else:\n",
-    " tw_list.loc[index, 'sentiment'] = “neutral”\n",
-    " tw_list.loc[index, 'neg'] = neg\n",
-    " tw_list.loc[index, 'neu'] = neu\n",
-    " tw_list.loc[index, 'pos'] = pos\n",
-    " tw_list.loc[index, 'compound'] = comp\n",
+    "    score = SentimentIntensityAnalyzer().polarity_scores(row)\n",
+    "    neg = score['neg']\n",
+    "    neu = score['neu']\n",
+    "    pos = score['pos']\n",
+    "    comp = score['compound']\n",
+    "    if neg > pos:\n",
+    "        tw_list.loc[index, 'sentiment'] = \"negative\"\n",
+    "    elif pos > neg:\n",
+    "        tw_list.loc[index, 'sentiment'] = \"positive\"\n",
+    "    else:\n",
+    "        tw_list.loc[index, 'sentiment'] = \"neutral\"\n",
+    "        tw_list.loc[index, 'neg'] = neg\n",
+    "        tw_list.loc[index, 'neu'] = neu\n",
+    "        tw_list.loc[index, 'pos'] = pos\n",
+    "        tw_list.loc[index, 'compound'] = comp\n",
     "tw_list.head(10)"
    ]
   },
@@ -315,9 +315,9 @@
    "outputs": [],
    "source": [
     "#Creating new data frames for all sentiments (positive, negative and neutral)\n",
-    "tw_list_negative = tw_list[tw_list[“sentiment”]==”negative”]\n",
-    "tw_list_positive = tw_list[tw_list[“sentiment”]==”positive”]\n",
-    "tw_list_neutral = tw_list[tw_list[“sentiment”]==”neutral”]"
+    "tw_list_negative = tw_list[tw_list[\"sentiment\"]==\"negative\"]\n",
+    "tw_list_positive = tw_list[tw_list[\"sentiment\"]==\"positive\"]\n",
+    "tw_list_neutral = tw_list[tw_list[\"sentiment\"]==\"neutral\"]"
    ]
   },
   {
@@ -327,11 +327,11 @@
    "outputs": [],
    "source": [
     "def count_values_in_column(data,feature):\n",
-    " total=data.loc[:,feature].value_counts(dropna=False)\n",
-    " percentage=round(data.loc[:,feature].value_counts(dropna=False,normalize=True)*100,2)\n",
-    " return pd.concat([total,percentage],axis=1,keys=[‘Total’,’Percentage’])\n",
+    "    total=data.loc[:,feature].value_counts(dropna=False)\n",
+    "    percentage=round(data.loc[:,feature].value_counts(dropna=False,normalize=True)*100,2)\n",
+    "    return pd.concat([total,percentage],axis=1,keys=['Total','Percentage'])\n",
     "#Count_values for sentiment\n",
-    "count_values_in_column(tw_list,”sentiment”)"
+    "count_values_in_column(tw_list,\"sentiment\")"
    ]
   },
   {
@@ -341,13 +341,13 @@
    "outputs": [],
    "source": [
     "# create data for Pie Chart\n",
-    "pichart = count_values_in_column(tw_list,”sentiment”)\n",
+    "pichart = count_values_in_column(tw_list,\"sentiment\")\n",
     "names= pc.index\n",
-    "size=pc[“Percentage”]\n",
+    "size=pc[\"Percentage\"]\n",
     " \n",
     "# Create a circle for the center of the plot\n",
-    "my_circle=plt.Circle( (0,0), 0.7, color=’white’)\n",
-    "plt.pie(size, labels=names, colors=[‘green’,’blue’,’red’])\n",
+    "my_circle=plt.Circle( (0,0), 0.7, color='white')\n",
+    "plt.pie(size, labels=names, colors=['green','blue','red'])\n",
     "p=plt.gcf()\n",
     "p.gca().add_artist(my_circle)\n",
     "plt.show()"
@@ -361,18 +361,18 @@
    "source": [
     "#Function to Create Wordcloud\n",
     "def create_wordcloud(text):\n",
-    " mask = np.array(Image.open(“cloud.png”))\n",
-    " stopwords = set(STOPWORDS)\n",
-    " wc = WordCloud(background_color=”white”,\n",
-    " mask = mask,\n",
-    " max_words=3000,\n",
-    " stopwords=stopwords,\n",
-    " repeat=True)\n",
-    " wc.generate(str(text))\n",
-    " wc.to_file(“wc.png”)\n",
-    " print(“Word Cloud Saved Successfully”)\n",
-    " path=”wc.png”\n",
-    " display(Image.open(path))"
+    "    mask = np.array(Image.open(\"cloud.png\"))\n",
+    "    stopwords = set(STOPWORDS)\n",
+    "    wc = WordCloud(background_color=\"white\",\n",
+    "    mask = mask,\n",
+    "    max_words=3000,\n",
+    "    stopwords=stopwords,\n",
+    "    repeat=True)\n",
+    "    wc.generate(str(text))\n",
+    "    wc.to_file(\"wc.png\")\n",
+    "    print(\"Word Cloud Saved Successfully\")\n",
+    "    path=\"wc.png\"\n",
+    "    display(Image.open(path))"
    ]
   },
   {
@@ -382,7 +382,7 @@
    "outputs": [],
    "source": [
     "#Creating wordcloud for all tweets\n",
-    "create_wordcloud(tw_list[“text”].values)"
+    "create_wordcloud(tw_list[\"text\"].values)"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "outputs": [],
    "source": [
     "#Creating wordcloud for positive sentiment\n",
-    "create_wordcloud(tw_list_positive[“text”].values)"
+    "create_wordcloud(tw_list_positive[\"text\"].values)"
    ]
   },
   {
@@ -402,7 +402,7 @@
    "outputs": [],
    "source": [
     "#Creating wordcloud for negative sentiment\n",
-    "create_wordcloud(tw_list_negative[“text”].values)"
+    "create_wordcloud(tw_list_negative[\"text\"].values)"
    ]
   },
   {
@@ -411,9 +411,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculating tweet’s lenght and word count\n",
-    "tw_list[‘text_len’] = tw_list[‘text’].astype(str).apply(len)\n",
-    "tw_list[‘text_word_count’] = tw_list[‘text’].apply(lambda x: len(str(x).split()))\n",
+    "#Calculating tweet's lenght and word count\n",
+    "tw_list['text_len'] = tw_list['text'].astype(str).apply(len)\n",
+    "tw_list['text_word_count'] = tw_list['text'].apply(lambda x: len(str(x).split()))\n",
     "round(pd.DataFrame(tw_list.groupby(\"sentiment\").text_len.mean()),2)"
    ]
   },
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "round(pd.DataFrame(tw_list.groupby(“sentiment”).text_word_count.mean()),2)"
+    "round(pd.DataFrame(tw_list.groupby(\"sentiment\").text_word_count.mean()),2)"
    ]
   },
   {
@@ -434,10 +434,10 @@
    "source": [
     "#Removing Punctuation\n",
     "def remove_punct(text):\n",
-    " text = “”.join([char for char in text if char not in string.punctuation])\n",
-    " text = re.sub(‘[0–9]+’, ‘’, text)\n",
-    " return text\n",
-    "tw_list[‘punct’] = tw_list[‘text’].apply(lambda x: remove_punct(x))\n",
+    "    text = \"\".join([char for char in text if char not in string.punctuation])\n",
+    "    text = re.sub('[0–9]+', '', text)\n",
+    "    return text\n",
+    "tw_list['punct'] = tw_list['text'].apply(lambda x: remove_punct(x))\n",
     "#Appliyng tokenization\n",
     "def tokenization(text):\n",
     "    text = re.split('\\W+', text)\n",
@@ -474,10 +474,10 @@
    "source": [
     "#Appliyng Countvectorizer\n",
     "countVectorizer = CountVectorizer(analyzer=clean_text) \n",
-    "countVector = countVectorizer.fit_transform(tw_list[‘text’])\n",
-    "print(‘{} Number of reviews has {} words’.format(countVector.shape[0], countVector.shape[1]))\n",
-    "#print(countVectorizer.get_feature_names())\n",
-    "1281 Number of reviews has 2966 words\n",
+    "countVector = countVectorizer.fit_transform(tw_list['text'])\n",
+    "print('{} Number of reviews has {} words'.format(countVector.shape[0], countVector.shape[1]))\n",
+    "# print(countVectorizer.get_feature_names())\n",
+    "# 1281 Number of reviews has 2966 words\n",
     "count_vect_df = pd.DataFrame(countVector.toarray(), columns=countVectorizer.get_feature_names())\n",
     "count_vect_df.head()"
    ]
@@ -502,14 +502,14 @@
    "source": [
     "#Function to ngram\n",
     "def get_top_n_gram(corpus,ngram_range,n=None):\n",
-    " vec = CountVectorizer(ngram_range=ngram_range,stop_words = ‘english’).fit(corpus)\n",
-    " bag_of_words = vec.transform(corpus)\n",
-    " sum_words = bag_of_words.sum(axis=0) \n",
-    " words_freq = [(word, sum_words[0, idx]) for word, idx in vec.vocabulary_.items()]\n",
-    " words_freq =sorted(words_freq, key = lambda x: x[1], reverse=True)\n",
-    " return words_freq[:n]\n",
+    "    vec = CountVectorizer(ngram_range=ngram_range,stop_words = 'english').fit(corpus)\n",
+    "    bag_of_words = vec.transform(corpus)\n",
+    "    sum_words = bag_of_words.sum(axis=0) \n",
+    "    words_freq = [(word, sum_words[0, idx]) for word, idx in vec.vocabulary_.items()]\n",
+    "    words_freq =sorted(words_freq, key = lambda x: x[1], reverse=True)\n",
+    "    return words_freq[:n]\n",
     "#n2_bigram\n",
-    "n2_bigrams = get_top_n_gram(tw_list[‘text’],(2,2),20)\n",
+    "n2_bigrams = get_top_n_gram(tw_list['text'],(2,2),20)\n",
     "n2_bigrams"
    ]
   },
@@ -520,7 +520,7 @@
    "outputs": [],
    "source": [
     "#n3_trigram\n",
-    "n3_trigrams = get_top_n_gram(tw_list[‘text’],(3,3),20)\n",
+    "n3_trigrams = get_top_n_gram(tw_list['text'],(3,3),20)\n",
     "n3_trigrams"
    ]
   }
