saved dogecoin tweets to csv in data folder

--- a/Evan's notebook.ipynb
+++ b/Evan's notebook.ipynb
@@ -15,8 +15,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Business Problem:\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -730,9 +738,9 @@
      "output_type": "stream",
      "text": [
       "total number:  2500\n",
-      "positive number:  1166\n",
-      "negative number:  199\n",
-      "neutral number:  1135\n"
+      "positive number:  844\n",
+      "negative number:  133\n",
+      "neutral number:  1523\n"
      ]
     }
    ],
@@ -2400,6 +2408,40 @@
     "#n3_trigram\n",
     "n3_trigrams = get_top_n_gram(tw_list['text'],(3,3),20)\n",
     "n3_trigrams"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MODEL BUILDER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unwanted = nltk.corpus.stopwords.words(\"english\")\n",
+    "unwanted.extend([w.lower() for w in nltk.corpus.names.words()])\n",
+    "\n",
+    "def skip_unwanted(pos_tuple):\n",
+    "    word, tag = pos_tuple\n",
+    "    if not word.isalpha() or word in unwanted:\n",
+    "        return False\n",
+    "    if tag.startswith(\"NN\"):\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "positive_words = [word for word, tag in filter(\n",
+    "    skip_unwanted,\n",
+    "    nltk.pos_tag(nltk.corpus.movie_reviews.words(categories=[\"pos\"]))\n",
+    ")]\n",
+    "negative_words = [word for word, tag in filter(\n",
+    "    skip_unwanted,\n",
+    "    nltk.pos_tag(nltk.corpus.movie_reviews.words(categories=[\"neg\"]))\n",
+    ")]"
    ]
   }
  ],
