removing my creds

--- a/Andy's notebook.ipynb
+++ b/Andy's notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,32 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'consumerKey': '8d2USPEgjiQt7q1CGfNKOtC9I',\n",
-       " 'consumerSecret': '7vBoE8xG7f1I4XTQdnwI2U40JGh7oz4wQVuZwf02I1x4Q8N2yK',\n",
-       " 'accessToken': '1324724489888976896-TCPOGt5Cfx5bGRV3u5y642E6WEjFoW',\n",
-       " 'accessTokenSecret': 'fI099EqG4B9Jej9kYqSvqPfUjV2IeflEJBgRC4CTI5WMC'}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('/Users/andy.schmeck.OFFICE/Documents/Flatiron/phase_4/project_4/dsc_project4/.secret/twitter_api.json') as f:\n",
-    "    creds = json.load(f)\n",
-    "creds"
+    "    creds = json.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
