--- a/Andy's notebook.ipynb
+++ b/Andy's notebook.ipynb
@@ -3,8 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# # Install Libraries\n",
     "# !pip install textblob\n",
@@ -12,13 +10,13 @@
     "# !pip install pycountry\n",
     "# !pip install wordcloud\n",
     "# !pip install langdetect"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Import Libraries\n",
     "from textblob import TextBlob\n",
@@ -41,23 +39,29 @@
     "from nltk.stem import SnowballStemmer\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from sklearn.feature_extraction.text import CountVectorizer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# nltk.download('vader_lexicon')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "source": [
+    "with open('/Users/andy.schmeck.OFFICE/Documents/Flatiron/phase_4/project_4/dsc_project4/.secret/twitter_api.json') as f:\n",
+    "    creds = json.load(f)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'consumerKey': '8d2USPEgjiQt7q1CGfNKOtC9I',\n",
@@ -66,22 +70,15 @@
        " 'accessTokenSecret': 'fI099EqG4B9Jej9kYqSvqPfUjV2IeflEJBgRC4CTI5WMC'}"
       ]
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 21
     }
    ],
-   "source": [
-    "with open('/Users/andy.schmeck.OFFICE/Documents/Flatiron/phase_4/project_4/dsc_project4/.secret/twitter_api.json') as f:\n",
-    "    creds = json.load(f)\n",
-    "creds"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Authentication\n",
     "consumerKey = creds['consumerKey']\n",
@@ -91,16 +88,22 @@
     "auth = tweepy.OAuthHandler(consumerKey, consumerSecret)\n",
     "auth.set_access_token(accessToken, accessTokenSecret)\n",
     "api = tweepy.API(auth)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "source": [
+    "public_tweets = api.home_timeline()\n",
+    "for tweet in public_tweets:\n",
+    "    print(tweet.text)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "RT @ShirtBimbo: https://t.co/k1sLlldu8U\n",
       "And this\n",
@@ -133,26 +136,11 @@
      ]
     }
    ],
-   "source": [
-    "public_tweets = api.home_timeline()\n",
-    "for tweet in public_tweets:\n",
-    "    print(tweet.text)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter keyword or hastag to search: dogecoin\n",
-      "Please enter how many tweets to analyze: 100\n"
-     ]
-    }
-   ],
    "source": [
     "#Sentiment Analysis\n",
     "def percentage(part,whole):\n",
@@ -197,24 +185,22 @@
     "positive = format(positive, '.1f')\n",
     "negative = format(negative, '.1f')\n",
     "neutral = format(neutral, '.1f')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Please enter keyword or hastag to search: dogecoin\n",
+      "Please enter how many tweets to analyze: 100\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total number:  100\n",
-      "positive number:  44\n",
-      "negative number:  9\n",
-      "neutral number:  47\n"
-     ]
-    }
-   ],
    "source": [
     "#Number of Tweets (Total, Positive, Negative, Neutral)\n",
     "tweet_list = pd.DataFrame(tweet_list)\n",
@@ -225,13 +211,24 @@
     "print('positive number: ',len(positive_list))\n",
     "print('negative number: ', len(negative_list))\n",
     "print('neutral number: ',len(neutral_list))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "total number:  100\n",
+      "positive number:  44\n",
+      "negative number:  9\n",
+      "neutral number:  47\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Creating PieCart\n",
     "labels = ['Positive ['+str(positive)+'%]' , 'Neutral ['+str(neutral)+'%]','Negative ['+str(negative)+'%]']\n",
@@ -243,31 +240,31 @@
     "plt.title(\"Sentiment Analysis Result for keyword= \"+keyword+\"\" )\n",
     "plt.axis('equal')\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tweet_list"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tweet_list.drop_duplicates(inplace = True)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Cleaning Text (RT, Punctuation etc)\n",
     "#Creating new dataframe and new features\n",
@@ -279,13 +276,13 @@
     "tw_list[\"text\"] = tw_list.text.map(remove_rt).map(rt)\n",
     "tw_list[\"text\"] = tw_list.text.str.lower()\n",
     "tw_list.head(10)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Calculating Negative, Positive, Neutral and Compound values\n",
     "tw_list[['polarity', 'subjectivity']] = tw_list['text'].apply(lambda Text: pd.Series(TextBlob(Text).sentiment))\n",
@@ -306,25 +303,25 @@
     "        tw_list.loc[index, 'pos'] = pos\n",
     "        tw_list.loc[index, 'compound'] = comp\n",
     "tw_list.head(10)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Creating new data frames for all sentiments (positive, negative and neutral)\n",
     "tw_list_negative = tw_list[tw_list[\"sentiment\"]==\"negative\"]\n",
     "tw_list_positive = tw_list[tw_list[\"sentiment\"]==\"positive\"]\n",
     "tw_list_neutral = tw_list[tw_list[\"sentiment\"]==\"neutral\"]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def count_values_in_column(data,feature):\n",
     "    total=data.loc[:,feature].value_counts(dropna=False)\n",
@@ -332,13 +329,13 @@
     "    return pd.concat([total,percentage],axis=1,keys=['Total','Percentage'])\n",
     "#Count_values for sentiment\n",
     "count_values_in_column(tw_list,\"sentiment\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# create data for Pie Chart\n",
     "pichart = count_values_in_column(tw_list,\"sentiment\")\n",
@@ -351,13 +348,13 @@
     "p=plt.gcf()\n",
     "p.gca().add_artist(my_circle)\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Function to Create Wordcloud\n",
     "def create_wordcloud(text):\n",
@@ -373,64 +370,64 @@
     "    print(\"Word Cloud Saved Successfully\")\n",
     "    path=\"wc.png\"\n",
     "    display(Image.open(path))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Creating wordcloud for all tweets\n",
     "create_wordcloud(tw_list[\"text\"].values)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Creating wordcloud for positive sentiment\n",
     "create_wordcloud(tw_list_positive[\"text\"].values)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Creating wordcloud for negative sentiment\n",
     "create_wordcloud(tw_list_negative[\"text\"].values)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Calculating tweet's lenght and word count\n",
     "tw_list['text_len'] = tw_list['text'].astype(str).apply(len)\n",
     "tw_list['text_word_count'] = tw_list['text'].apply(lambda x: len(str(x).split()))\n",
     "round(pd.DataFrame(tw_list.groupby(\"sentiment\").text_len.mean()),2)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "round(pd.DataFrame(tw_list.groupby(\"sentiment\").text_word_count.mean()),2)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Removing Punctuation\n",
     "def remove_punct(text):\n",
@@ -464,13 +461,13 @@
     "    text = [ps.stem(word) for word in tokens if word not in stopword]  # remove stopwords and stemming\n",
     "    return text\n",
     "tw_list.head()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Appliyng Countvectorizer\n",
     "countVectorizer = CountVectorizer(analyzer=clean_text) \n",
@@ -480,25 +477,25 @@
     "# 1281 Number of reviews has 2966 words\n",
     "count_vect_df = pd.DataFrame(countVector.toarray(), columns=countVectorizer.get_feature_names())\n",
     "count_vect_df.head()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Most Used Words\n",
     "count = pd.DataFrame(count_vect_df.sum())\n",
     "countdf = count.sort_values(0,ascending=False).head(20)\n",
     "countdf[1:11]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Function to ngram\n",
     "def get_top_n_gram(corpus,ngram_range,n=None):\n",
@@ -511,18 +508,20 @@
     "#n2_bigram\n",
     "n2_bigrams = get_top_n_gram(tw_list['text'],(2,2),20)\n",
     "n2_bigrams"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#n3_trigram\n",
     "n3_trigrams = get_top_n_gram(tw_list['text'],(3,3),20)\n",
     "n3_trigrams"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
