--- a/Andy's notebook.ipynb
+++ b/Andy's notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "# # Install Libraries\n",
     "# !pip install textblob\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "# Import Libraries\n",
     "from textblob import TextBlob\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "# nltk.download('vader_lexicon')"
    ],
@@ -54,31 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "source": [
     "with open('/Users/andy.schmeck.OFFICE/Documents/Flatiron/phase_4/project_4/dsc_project4/.secret/twitter_api.json') as f:\n",
     "    creds = json.load(f)"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'consumerKey': '8d2USPEgjiQt7q1CGfNKOtC9I',\n",
-       " 'consumerSecret': '7vBoE8xG7f1I4XTQdnwI2U40JGh7oz4wQVuZwf02I1x4Q8N2yK',\n",
-       " 'accessToken': '1324724489888976896-TCPOGt5Cfx5bGRV3u5y642E6WEjFoW',\n",
-       " 'accessTokenSecret': 'fI099EqG4B9Jej9kYqSvqPfUjV2IeflEJBgRC4CTI5WMC'}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
+     "output_type": "error",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/andy.schmeck.OFFICE/Documents/Flatiron/phase_4/project_4/dsc_project4/.secret/twitter_api.json'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0c08b6bc9dc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/andy.schmeck.OFFICE/Documents/Flatiron/phase_4/project_4/dsc_project4/.secret/twitter_api.json'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mcreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/andy.schmeck.OFFICE/Documents/Flatiron/phase_4/project_4/dsc_project4/.secret/twitter_api.json'"
+     ]
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "source": [
     "# Authentication\n",
     "consumerKey = creds['consumerKey']\n",
@@ -94,53 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "public_tweets = api.home_timeline()\n",
     "for tweet in public_tweets:\n",
     "    print(tweet.text)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "RT @ShirtBimbo: https://t.co/k1sLlldu8U\n",
-      "And this\n",
-      "https://t.co/mENFIDCoPd\n",
-      "How do people buy decent mattresses these days? Am I supposed to get one of those interweb brands mailed to me?\n",
-      "\n",
-      "Ma… https://t.co/JXcKUp9DiX\n",
-      "@ozziegooen @PTetlock Thanks for pointing this out.\n",
-      "my neighbors have no idea what my job is, which is 👌🏻perfect. I’m on stop-by-for-coffee terms with most of my neigh… https://t.co/K5LBWAfCyp\n",
-      "Man. People can read all sorts of things you don’t say into what you write https://t.co/8BBoBsVVS4\n",
-      "If the bitcoin thesis is correct, then bitcoin advocates need to expend exactly zero effort arguing against other c… https://t.co/zeHm93ztE6\n",
-      "@DavidDeutschOxf The poll got 198 responses, from a (presumably) tiny, very particular corner of academia (probably… https://t.co/EOPlAj9AvK\n",
-      "RT @LozzaFox: “Vaccine passports will absolutely end human liberty in the west.” https://t.co/j7pDK1lV3B\n",
-      "@normonics Same. \n",
-      "\n",
-      "Good explanation of this in Beginning of Infinity. \n",
-      "\n",
-      "Not sure if you’ve heard of that book.\n",
-      "RT @paulkrugman: Trying to clarify my own thoughts on inflation. I got inflation wrong; I didn't see the current surge coming. But why? I d…\n",
-      "https://t.co/o5e3mZLbDa\n",
-      "Probably true. \n",
-      "\n",
-      "I know at least one CEO who spends a lot of time thinking about this… https://t.co/jTqC2EMTaj\n",
-      "https://t.co/zO1uBaYxUx\n",
-      "https://t.co/n9NmawGxcN\n",
-      "https://t.co/d6EZhbJ8i0\n",
-      "https://t.co/iOhqfUK0DB\n",
-      "Morning greetings from Jack London Park in Glen Ellen.  Spend two hours here and try and be in a bad mood. Go ahead… https://t.co/kzg8yGaENl\n",
-      "RT @IOHK_Charles: This is for you @lexfridman https://t.co/mZebnxQKBX\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "source": [
     "#Sentiment Analysis\n",
     "def percentage(part,whole):\n",
@@ -186,21 +149,12 @@
     "negative = format(negative, '.1f')\n",
     "neutral = format(neutral, '.1f')"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Please enter keyword or hastag to search: dogecoin\n",
-      "Please enter how many tweets to analyze: 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "source": [
     "#Number of Tweets (Total, Positive, Negative, Neutral)\n",
     "tweet_list = pd.DataFrame(tweet_list)\n",
@@ -212,18 +166,7 @@
     "print('negative number: ', len(negative_list))\n",
     "print('neutral number: ',len(neutral_list))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "total number:  100\n",
-      "positive number:  44\n",
-      "negative number:  9\n",
-      "neutral number:  47\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -526,9 +469,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
-   "language": "python",
-   "name": "learn-env"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('learn-env': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -541,6 +483,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "interpreter": {
+   "hash": "c15d3b161d9e31d3c14101c293414707f40e59d6cae0bbd6b708ca3d1e942f6f"
   }
  },
  "nbformat": 4,
