created final notebook and added more tweets from API

--- a/Evan's notebook.ipynb
+++ b/Evan's notebook.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -136,48 +136,48 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>@1goonrich DYOR @racoontoken_  #Racoontoken #R...</td>\n",
+       "      <th>2495</th>\n",
+       "      <td>#linkedin #twitter #facebook #instagram #dogec...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>@BscPitbull @Crypto_Dep @Shibtoken @dogecoin @...</td>\n",
+       "      <th>2496</th>\n",
+       "      <td>@mario_snajder @shibworld My friend, there is ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>@Stephworley420 oh go to https://t.co/82jPRPQS...</td>\n",
+       "      <th>2497</th>\n",
+       "      <td>@airdropcryt_ico @shibworld My friend, there i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>@BscPitbull @Crypto_Dep @Shibtoken @dogecoin @...</td>\n",
+       "      <th>2498</th>\n",
+       "      <td>@jisungie_02 @shibworld My friend, there is a ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>@BscPitbull @Crypto_Dep @Shibtoken @dogecoin @...</td>\n",
+       "      <th>2499</th>\n",
+       "      <td>Today Crypto Market🔪🔪🔪🔪 @TechnoCrazy8 @kapil_s...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>495 rows × 1 columns</p>\n",
+       "<p>2492 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  text\n",
-       "0                     @binance @BinanceChain @dogecoin\n",
-       "1    @DogecoinNorway @occupymars42069 @dogeofficial...\n",
-       "2    16 November 2021, 07:36h \\n\\nThe current price...\n",
-       "3    Give some tip today to a friend or family memb...\n",
-       "4    @Jayecane Help everyone by getting them into #...\n",
-       "..                                                 ...\n",
-       "495  @1goonrich DYOR @racoontoken_  #Racoontoken #R...\n",
-       "496  @BscPitbull @Crypto_Dep @Shibtoken @dogecoin @...\n",
-       "497  @Stephworley420 oh go to https://t.co/82jPRPQS...\n",
-       "498  @BscPitbull @Crypto_Dep @Shibtoken @dogecoin @...\n",
-       "499  @BscPitbull @Crypto_Dep @Shibtoken @dogecoin @...\n",
+       "                                                   text\n",
+       "0                      @binance @BinanceChain @dogecoin\n",
+       "1     @DogecoinNorway @occupymars42069 @dogeofficial...\n",
+       "2     16 November 2021, 07:36h \\n\\nThe current price...\n",
+       "3     Give some tip today to a friend or family memb...\n",
+       "4     @Jayecane Help everyone by getting them into #...\n",
+       "...                                                 ...\n",
+       "2495  #linkedin #twitter #facebook #instagram #dogec...\n",
+       "2496  @mario_snajder @shibworld My friend, there is ...\n",
+       "2497  @airdropcryt_ico @shibworld My friend, there i...\n",
+       "2498  @jisungie_02 @shibworld My friend, there is a ...\n",
+       "2499  Today Crypto Market🔪🔪🔪🔪 @TechnoCrazy8 @kapil_s...\n",
        "\n",
-       "[495 rows x 1 columns]"
+       "[2492 rows x 1 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,10 @@
     "df_2013 = pd.read_csv('data/judge-1377884607_tweet_product_company.csv', encoding = \"ISO-8859-1\")\n",
     "df_2013.drop(6,inplace=True)\n",
     "\n",
-    "df = pd.DataFrame(pd.read_csv('data/doge_tweets_111621_1138',index_col=0)['text'])\n",
+    "df_1 = pd.DataFrame(pd.read_csv('data/doge_tweets_111621_1138',index_col=0)['text'])\n",
+    "df_2 = pd.DataFrame(pd.read_csv('data/dogecoin2_11_16_21_1pm.csv',index_col=0)['text'])\n",
+    "df=pd.concat([df_1,df_2])\n",
+    "df.drop_duplicates(inplace=True)\n",
     "df"
    ]
   },
@@ -1105,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1147,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.0000</td>\n",
@@ -1154,7 +1157,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.0000</td>\n",
@@ -1164,37 +1167,37 @@
        "      <td>0.000000</td>\n",
        "      <td>0.350000</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.897</td>\n",
-       "      <td>0.103</td>\n",
-       "      <td>0.3400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.833</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>0.5859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.800</td>\n",
-       "      <td>0.200</td>\n",
-       "      <td>0.5411</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.674</td>\n",
+       "      <td>0.326</td>\n",
+       "      <td>0.5255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>0.886</td>\n",
-       "      <td>0.114</td>\n",
-       "      <td>0.4019</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.0000</td>\n",
@@ -1203,28 +1206,28 @@
        "      <th>6</th>\n",
        "      <td>0.309028</td>\n",
        "      <td>0.729167</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.076</td>\n",
-       "      <td>0.652</td>\n",
-       "      <td>0.271</td>\n",
-       "      <td>0.5411</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>0.445455</td>\n",
        "      <td>0.351515</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>0.614</td>\n",
-       "      <td>0.386</td>\n",
-       "      <td>0.8834</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>-0.400000</td>\n",
        "      <td>0.400000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.0000</td>\n",
@@ -1234,7 +1237,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.0000</td>\n",
@@ -1244,25 +1247,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   polarity  subjectivity  sentiment    neg    neu    pos  compound\n",
-       "0  0.000000      0.000000        0.0  0.000  1.000  0.000    0.0000\n",
-       "1  0.000000      0.000000        0.0  0.000  1.000  0.000    0.0000\n",
-       "2  0.000000      0.350000        1.0  0.000  0.897  0.103    0.3400\n",
-       "3  0.000000      0.000000        1.0  0.000  0.800  0.200    0.5411\n",
-       "4  0.000000      0.000000        1.0  0.000  0.886  0.114    0.4019\n",
-       "5  0.000000      0.000000        0.0  0.000  1.000  0.000    0.0000\n",
-       "6  0.309028      0.729167        1.0  0.076  0.652  0.271    0.5411\n",
-       "7  0.445455      0.351515        1.0  0.000  0.614  0.386    0.8834\n",
-       "8 -0.400000      0.400000        0.0  0.000  1.000  0.000    0.0000\n",
-       "9  0.000000      0.000000        0.0  0.000  1.000  0.000    0.0000"
+       "   polarity  subjectivity  sentiment  neg    neu    pos  compound\n",
+       "0  0.000000      0.000000        0.0  0.0  1.000  0.000    0.0000\n",
+       "1  0.000000      0.000000        0.0  0.0  1.000  0.000    0.0000\n",
+       "2  0.000000      0.350000        1.0  0.0  0.833  0.167    0.5859\n",
+       "3  0.000000      0.000000        1.0  0.0  0.674  0.326    0.5255\n",
+       "4  0.000000      0.000000        0.0  0.0  1.000  0.000    0.0000\n",
+       "5  0.000000      0.000000        0.0  0.0  1.000  0.000    0.0000\n",
+       "6  0.309028      0.729167        0.0  0.0  1.000  0.000    0.0000\n",
+       "7  0.445455      0.351515        0.0  0.0  1.000  0.000    0.0000\n",
+       "8 -0.400000      0.400000        0.0  0.0  1.000  0.000    0.0000\n",
+       "9  0.000000      0.000000        0.0  0.0  1.000  0.000    0.0000"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "remove_rt = lambda x: re.sub('RT @\\w+: ',\" \",x)\n",
+    "rt = lambda x: re.sub(\"(@[A-Za-z0-9]+)|([^0-9A-Za-z \\t])|(\\w+://\\S+)\",\" \",x)\n",
+    "df[\"clean_text\"] = df.text.map(remove_rt).map(rt)\n",
+    "df[\"clean_text\"] = df.clean_text.str.lower()\n",
+    "\n",
+    "top_list,vec = get_top_n_gram(df['clean_text'], (2,3),500)\n",
+    "\n",
     "#Calculating Negative, Positive, Neutral and Compound values\n",
     "df_probs = pd.DataFrame()\n",
     "df_probs[['polarity', 'subjectivity']] = df['clean_text'].apply(lambda Text: pd.Series(TextBlob(Text).sentiment))\n",
@@ -1287,70 +1297,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions\n",
+      "0.0    524\n",
+      "1.0     99\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.0    361\n",
-       "1.0    134\n",
-       "Name: sentiment, dtype: int64"
+       "0.7849117174959872"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_probs['sentiment'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(495, 22)"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vec.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7661290322580645"
-      ]
-     },
-     "execution_count": 219,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "remove_rt = lambda x: re.sub('RT @\\w+: ',\" \",x)\n",
-    "rt = lambda x: re.sub(\"(@[A-Za-z0-9]+)|([^0-9A-Za-z \\t])|(\\w+://\\S+)\",\" \",x)\n",
-    "df[\"clean_text\"] = df.text.map(remove_rt).map(rt)\n",
-    "df[\"clean_text\"] = df.clean_text.str.lower()\n",
-    "\n",
-    "top_list,vec = get_top_n_gram(df['clean_text'], (2,3),500)\n",
-    "\n",
     "X_train,X_test,y_train,y_test = train_test_split(vec.todense(),df_probs['sentiment'],random_state=1)\n",
     "\n",
     "# kmeans = KMeans(n_clusters=3)\n",
@@ -1385,7 +1356,7 @@
     "\n",
     "df_fin['predictions'] = y_preds\n",
     "\n",
-    "df_fin.value_counts('predictions')\n",
+    "print(df_fin.value_counts('predictions'))\n",
     "\n",
     "# print(silhouette_score(vec,y_preds))\n",
     "\n",
@@ -1394,22 +1365,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.25"
+       "(623,)"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_test.sum()/124"
+    "y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.34831460674157305"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.sum()/623"
    ]
   },
   {
