started Jupyter Notebook and pulled more tweets

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -4,6 +4,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](dogecoin.jpg \"Dogecoin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Dogecoin](images/dogecoin.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A hedgefund is seeking to profit from the volatility and inefficiences of the cryptocurrency market. They would like to focus on Dogecoin, a cryptocurrency with a $30B market cap. Their marketing team desires to better understand the sentiment around dogecoin, for understanding other owners and what words or phrases most reseonate with them. \n",
+    "\n",
+    "Dogecoin began as satire, using a meme of a Shiba Inu dog misspelled as \"doge.\" The makers, Billy Marcus and Jackson Palmer, created it in late 2013. Then launched a large campaing including sending the Jamaican Bobled team to the '14 olympics and sponsoring a Nascar. \n",
+    "\n",
+    "As a cryptocurrency, Dogecoin also relies on block-chain cryptography. All coin holder's carry a ledger. And miner's have to solve mathproblems to create new chains. They are rewarded with dogecoin. \n",
+    "\n",
+    "Dogecoin differs from many other cryptocurrency in that it has no lifetime cap on the number of coins that can be produced. This means it is highly inflationary--by design. This diminishes the coin as a store of value, but increases its use as an actual currency. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Business Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Market volatililty and the speculative nature of Dogecoin increase risk of owning asset. Since the price of other cryptocurrencies have proven susceptible to the sentiment of its buyers and sellers (citation), the hedfund seeks deeper comprehension of the sentiment of those very buyers and seller, in order to get a better grasp on the market, and possibly leverage that information for profits in the future. This project uses Twitter as a proxy for the buyers and sellers, and analyzes tweets containing the word \"dogecoin.\" "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Twitter API, Tweets, Features, Target"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Twitter API Request Code\n",
     "```\n",
     "# Authentication\n",
@@ -74,6 +136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -102,7 +171,7 @@
     "import string\n",
     "import json\n",
     "\n",
-    "# from wordcloud import WordCloud, STOPWORDS\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
     "from PIL import Image\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from nltk.sentiment import SentimentAnalyzer\n",
@@ -110,6 +179,13 @@
     "from nltk.stem import SnowballStemmer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concatenate Tweets"
    ]
   },
   {
@@ -217,14 +293,18 @@
     "with open('/Users/evanjays/.secrets/twitter_creds.json') as f:\n",
     "    creds = json.load(f)\n",
     "\n",
-    "df_2013 = pd.read_csv('data/judge-1377884607_tweet_product_company.csv', encoding = \"ISO-8859-1\")\n",
-    "df_2013.drop(6,inplace=True)\n",
-    "\n",
     "df_1 = pd.DataFrame(pd.read_csv('data/doge_tweets_111621_1138',index_col=0)['text'])\n",
     "df_2 = pd.DataFrame(pd.read_csv('data/dogecoin2_11_16_21_1pm.csv',index_col=0)['text'])\n",
     "df=pd.concat([df_1,df_2])\n",
     "df.drop_duplicates(inplace=True)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write a function for vectorizing"
    ]
   },
   {
@@ -240,6 +320,13 @@
     "    words_freq = [(word, sum_words[0, idx]) for word, idx in vec.vocabulary_.items()]\n",
     "    words_freq =sorted(words_freq, key = lambda x: x[1], reverse=True)\n",
     "    return words_freq[:n], bag_of_words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean Tweets"
    ]
   },
   {
@@ -402,9 +489,11 @@
     }
    ],
    "source": [
-    "remove_rt = lambda x: re.sub('RT @\\w+: ',\" \",x)\n",
+    "# Remove punctuation\n",
     "rt = lambda x: re.sub(\"(@[A-Za-z0-9]+)|([^0-9A-Za-z \\t])|(\\w+://\\S+)\",\" \",x)\n",
+    "# Remove Retweets\n",
     "df[\"clean_text\"] = df.text.map(remove_rt).map(rt)\n",
+    "# Lower the case \n",
     "df[\"clean_text\"] = df.clean_text.str.lower()\n",
     "\n",
     "top_list,vec = get_top_n_gram(df['clean_text'], (2,3),500)\n",
@@ -429,6 +518,13 @@
     "    df_probs.loc[index, 'pos'] = pos\n",
     "    df_probs.loc[index, 'compound'] = comp\n",
     "df_probs.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train-Test Split, PCA, Scaling, and our Model"
    ]
   },
   {
