Added additional markdown cells for explanation

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -168,15 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a function for vectorizing\n",
-    "Note, this function removes stopwords and sorts the vectorized  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "removed stopwords"
+    "## Write a function for Vectorizing the Tweets\n",
+    "\n",
+    "The below functions build our vectorized data. Note, this function removes stopwords and sorts the vectorized. The function also returns a list of the top occurring words. These functions are used later on."
    ]
   },
   {
@@ -214,7 +208,7 @@
    "metadata": {},
    "source": [
     "## Clean Tweets\n",
-    "We removed punctuation, in order to track similar words. Likewise, we made every word lower case."
+    "Firstly, We removed punctuation and lowercase each word, in order to track similar words. Likewise, we made every word lower case."
    ]
   },
   {
@@ -231,6 +225,20 @@
     "df[\"clean_text\"] = df.text.map(remove_rt).map(rt)\n",
     "# Lower the case \n",
     "df[\"clean_text\"] = df.clean_text.str.lower()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Sentiment Intensity Analyzer with VADER to Build Our Target Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below cell uses textblob and sentiment intensity analyzer and creates a dataframe with the polarity, subjectivity and sentiment of the tweet."
    ]
   },
   {
@@ -368,6 +376,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the piechart of the breakdown of tweets after the target column is created."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -390,7 +405,7 @@
     "positive = format(percentage(df_probs[df_probs['sentiment'] == 1].shape[0],df_probs.shape[0]),'.1f')\n",
     "negative = format(percentage(df_probs[df_probs['sentiment'] == 0].shape[0],df_probs.shape[0]),'.1f')\n",
     "\n",
-    "labels = ['Positive ['+str(positive)+'%]','Negative ['+str(negative)+'%]']\n",
+    "labels = ['Positive ['+str(positive)+'%]','Negative/Neutral ['+str(negative)+'%]']\n",
     "\n",
     "sizes = [positive, negative]\n",
     "colors = ['yellowgreen', 'blue']\n",
@@ -400,6 +415,20 @@
     "plt.title(\"Sentiment Analysis Result for dogecoin\" )\n",
     "plt.axis('equal')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering our Positive Reinforcement Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We filter for only positive tweets as marked by the sentiment intensity analyzer and make a dataframe."
    ]
   },
   {
@@ -416,6 +445,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tweets are cleaned of punctuation and capitalization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -429,6 +465,13 @@
     "df_pos[\"clean_text\"] = df_pos.text.map(remove_rt).map(rt).copy(deep=True)\n",
     "# Lower the case \n",
     "df_pos[\"clean_text\"] = df_pos.clean_text.str.lower().copy(deep=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we run our n_gram finder function to generate a list of the top 300 frequently occurring words that exist in only positive tweets."
    ]
   },
   {
@@ -449,6 +492,13 @@
     "positives = [X[0] for X in positives]\n",
     "positives = [x for x in positives if x not in ['dogecoin','doge','twitter','socialmedia','pintrest','think','today','people','don','facebook','project','10','a6n4rywnuahiy9nncneozajbgc2opmkqmo','hour','tx','dogecoins']]\n",
     "print(positives)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the column is created by checking for the existence of each word in the positive list we just created against each tweet. If a positive word exists in the tweet its positive word counter goes up by one."
    ]
   },
   {
@@ -486,12 +536,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding the column to the main dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_feat = pd.concat([df['clean_text'], pd.DataFrame(features,columns=['positive_word_count'])], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train, Test, Split of Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below cell shows our two features of the tweet text and the count of positive words in each tweet."
    ]
   },
   {
@@ -614,6 +685,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tweet text is then vectorized and the positive word counts are concatenated back to the vectorized data. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -627,6 +705,13 @@
     "\n",
     "X_train_vec = pd.concat([X_train['positive_word_count'], pd.DataFrame(feat_vec_train.todense())], axis=1)\n",
     "X_test_vec = pd.concat([X_test['positive_word_count'], pd.DataFrame(feat_vec_test.todense())], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building Models"
    ]
   },
   {
@@ -671,6 +756,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our final model we use multinomial naive bayes and feed in our vectorized data and positive word counts. We use naive bayes to help prevent overfitting. The output of this cell shows the cross validation results, the test predictions and the accuracy score of predicting on test data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -705,6 +797,13 @@
     "\n",
     "# Metric on Test Score\n",
     "print('Accuracy Score:',accuracy_score(y_test,df_fin['predictions']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
    ]
   },
   {
